add_library(apsp_yyx SHARED)
target_sources(apsp_yyx PRIVATE apsp_yyx.cc)
target_compile_options(apsp_yyx PRIVATE -Ofast -march=native -mavx512f )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(apsp_yyx PUBLIC OpenMP::OpenMP_CXX)
endif()
# set(ENV{OMP_PROC_BIND} "close")
# set(ENV{OMP_PLACES} "sockets")